metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/QC_Scorecard__c.object-meta.xml
<CustomObject>
    <label>QC Scorecard</label>
    <nameField>
        <label>QC Scorecard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>