metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/fields/Grader_Comment__c.field-meta.xml
<CustomField>
    <fullName>Grader_Comment__c</fullName>
    <description>Grader&apos;s feedback for the whole call</description>
    <inlineHelpText>Grader&apos;s feedback for the whole call</inlineHelpText>
    <label>Grader Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>