metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/fields/Incorrect_Result__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by ISRs to identify calls that were incorrectly evaluated by AI.</description>
    <inlineHelpText>Field used by ISRs to identify calls that were incorrectly evaluated by AI. Check this box if you disagree with the result and explain the reason in the &quot;Incorrect Result Details&quot; field.</inlineHelpText>
    <label>Incorrect Result</label>
    <type>Checkbox</type>
</CustomField>