metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/fields/Incorrect_Result_Details__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Result_Details__c</fullName>
    <description>ISRs are required to provide details of what was incorrect about AI QC result.</description>
    <inlineHelpText>If you checked &quot;Incorrect Result&quot; checkbox, explain what is incorrect about the AI QC.</inlineHelpText>
    <label>Incorrect Result Details</label>
    <type>TextArea</type>
</CustomField>