metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/fields/Main_Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Main_Fail_Reason__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>When a task is being verified for QBs and failed the QCer puts the Main Fail Reason into this field</description>
    <label>Main Fail Reason</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>QC_Rule_Result__c.QC_Scorecard__c</valueField>
        </filterItems>
        <filterItems>
            <field>QC_Rule_Result__c.Result__c</field>
            <operation>equals</operation>
            <value>&apos;Fail&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>QC_Rule_Result__c</referenceTo>
    <relationshipLabel>QC Scorecards</relationshipLabel>
    <relationshipName>QC_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>