metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/fields/QC_Summary__c.field-meta.xml
<CustomField>
    <fullName>QC_Summary__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>QC Summary</label>
    <referenceTo>QC_Summary__c</referenceTo>
    <relationshipLabel>QC Scorecards</relationshipLabel>
    <relationshipName>QC_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>