metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/fields/Result2__c.field-meta.xml
<CustomField>
    <fullName>Result2__c</fullName>
    <description>Pass if the Score is equal or above 60%</description>
    <formula>IF(ISNULL(Score__c), &apos;Unable to Grade&apos;, IF(Score__c &gt;= 0.6, &apos;Pass&apos;, &apos;Fail&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pass if the Score is equal or above 60%</inlineHelpText>
    <label>Result</label>
    <type>Text</type>
</CustomField>