metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Result__c</columns>
    <columns>Score__c</columns>
    <columns>Grader_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>