metadata/sf-prod/force-app/main/default/objects/QC_Scorecard__c/listViews/X80.listView-meta.xml
<ListView>
    <fullName>X80</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Score__c</columns>
    <columns>Result2__c</columns>
    <columns>Grader_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>75.00</value>
    </filters>
    <label>&gt;75%</label>
</ListView>